# X-Ramp

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
circuits/: README.md  compile.sh  demo.js  deposit_proof.circom  inr_transfer_proof.circom  package.json  proof_generator.js  setup.js  soroban_integration.rs  withdrawal_proof.circom
circuits/test/: circuit_test.js
contracts/xramp-vault/contracts/hello-world/: Cargo.toml
contracts/xramp-vault/contracts/hello-world/src/: lib.rs
contracts/xramp-vault/contracts/hello-world/test_snapshots/test/: test_admin_functions.1.json  test_anchor_key_management.1.json  test_attestation_replay_protection.1.json  test_attestation_verification.1.json  test_balance_tracking.1.json  test_deposit_with_attestation.1.json  test_initialize_contract.1.json
src/app/: globals.css  layout.js  page.js
src/app/dashboard/: page.js
src/app/debug/: page.js
src/components/auth/: AuthProvider.js  LoginForm.js  RegisterForm.js
src/components/dashboard/: HelpCenterCard.js  NotificationPreferences.js  WalletInsights.js
src/components/landing/: CTASection.js  FeatureVisuals.js  FeaturesSection.js  Footer.js  HeroSection.js  LandingPageClient.js  MetricsDashboard.js  Navbar.js
src/components/onboarding/: HelpButton.js  OnboardingTutorial.js  useFirstVisitTutorial.js
src/components/preferences/: ExperienceProvider.js  PreferenceControls.js
src/lib/: anchor.js  auth.js  feeSponsor.js  mongodb.js  stellar.js  ux.js  zk.js
src/models/: Attestation.js  Transaction.js  User.js
(+36 files in other folders)
