[package]
name = "xramp-vault"
version = "0.1.0"
edition = "2021"
publish = false
description = "X-Ramp ZK-powered vault contract with BN254 proof verification"

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
default = []
testutils = ["soroban-sdk/testutils"]
